# Group-Protocol-Stack

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  gbp-stack.sln
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
crates/gap/: Cargo.toml  README.md
crates/gap/src/: client.rs  jitter.rs  lib.rs  payload.rs
crates/gbp-flat/: Cargo.toml  README.md  build.rs
crates/gbp-flat/fbs/: gap.fbs  gbp.fbs  gsp.fbs  gtp.fbs
crates/gbp-flat/src/: lib.rs
crates/gbp-proto/: Cargo.toml  README.md
crates/gbp-proto/proto/: gap.proto  gbp.proto  gsp.proto  gtp.proto
crates/gbp-proto/src/: lib.rs
crates/gbp-sframe/: Cargo.toml  README.md
crates/gbp-sframe/src/: cipher.rs  error.rs  header.rs  kdf.rs  lib.rs  replay.rs
crates/gbp/base/: Cargo.toml  README.md
crates/gbp/base/src/: control.rs  error_object.rs  frame.rs  lib.rs
crates/gbp/cli/: Cargo.toml  README.md
crates/gbp/cli/src/: main.rs
crates/gbp/core/: Cargo.toml  README.md
crates/gbp/core/src/: bounded.rs  codec.rs  conformance.rs  control.rs  errors.rs  flags.rs  ids.rs  lib.rs  signal.rs  state.rs  stream.rs
crates/gbp/mls/: Cargo.toml  README.md
crates/gbp/mls/src/: lib.rs
crates/gbp/node/: Cargo.toml  README.md
crates/gbp/node/src/: lib.rs  node.rs
crates/gbp/stack/: Cargo.toml  README.md
crates/gbp/stack-ffi/: Cargo.toml  README.md
crates/gbp/stack-ffi/src/: lib.rs
crates/gbp/stack/examples/: gap_audio.rs  gsp_signals.rs  gtp_chat.rs
crates/gbp/stack/src/: lib.rs
crates/gbp/stack/tests/: handshake.rs  lifecycle.rs
crates/gbp/transport/: Cargo.toml  README.md
crates/gbp/transport/src/: lib.rs  quic.rs
crates/gbp/wasm/: Cargo.toml  README.md
crates/gbp/wasm/examples/: gapAudio.ts  gspSignals.ts  gtpChat.html  gtpChat.ts
crates/gbp/wasm/src/: lib.rs  tests.rs
crates/gsp/: Cargo.toml  README.md
crates/gsp/src/: args.rs  capabilities.rs  client.rs  lib.rs  roles.rs  signal.rs
crates/gtp/: Cargo.toml  README.md
crates/gtp/src/: attachment.rs  client.rs  history.rs  lib.rs  message.rs
csharp/: Directory.Build.props  README.md
csharp/GBPStack/: AudioFrame.cs  CapabilitiesNegotiator.cs  ControlOpcode.cs  GBPStack.csproj  GapAcceptResult.cs  GapClient.cs  GbpHelpers.cs  GroupNode.cs  GspAcceptResult.cs  GspClient.cs  GtpAcceptResult.cs  GtpClient.cs  InviteResult.cs  JitterBuffer.cs  JitterPushOutcome.cs  JitterPushResult.cs  MessageEntry.cs  MessageHistory.cs  MlsContext.cs  Native.cs  NodeEvent.cs  NodeState.cs  OutboundFrame.cs  PayloadCodec.cs  Permissions.cs  ProcessedKind.cs  README.md  RoleException.cs  RoleRegistry.cs  RoleSpec.cs  SFrameCipherSuite.cs  SFrameEncryptor.cs  SFrameSession.cs  SignalType.cs  StreamType.cs  Watermark.cs
csharp/GBPStack.Tests/: GBPStack.Tests.csproj  IntegrationTests.cs
csharp/GBPStack/runtimes/: .gitignore
csharp/examples/: GapAudio.cs  GspSignals.cs  GtpChat.cs
docs/en/: faq.md  gap_rfc.md  gbp-control-plane.md  gbp-errors-registry.md  gbp-interop-profile.md  gbp-leave-flow.md  gbp-mls-binding.md  gbp-security-architecture.md  gbp-sframe.md  gbp-state-machine.md  gbp_rfc.md  gsp_rfc.md  gtp_rfc.md  schemas.md
docs/ru/: gap_rfc.ru.md  gbp-control-plane.ru.md  gbp-errors-registry.ru.md  gbp-interop-profile.ru.md  gbp-leave-flow.ru.md  gbp-mls-binding.ru.md  gbp-security-architecture.ru.md  gbp-sframe.ru.md  gbp-state-machine.ru.md  gbp_rfc.ru.md  gsp_rfc.ru.md  gtp_rfc.ru.md  schemas.ru.md
js/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
js/examples/: gapAudio.ts  gspSignals.ts  gtpChat.ts
js/src/: capabilities.ts  gap.ts  gsp.ts  gtp.ts  history.ts  index.ts  jitter.ts  mls.ts  native.ts  node.ts  roles.ts  sframe.ts
js/tests/: integration.test.ts
python/: README.md  build_wheel.py  pyproject.toml  pyrightconfig.json  setup.py
python/examples/: gap_audio.py  gsp_signals.py  gtp_chat.py
python/gbp_stack/: __init__.py  _native.py  capabilities.py  gap_client.py  gbp_node.py  gsp_client.py  gtp_client.py  history.py  jitter.py  mls_context.py  roles.py  sframe_session.py
python/gbp_stack/_native/: .gitignore
python/tests/: test_integration.py
scripts/: README.md  bump-version.ps1  install-native.ps1  register-crates-trusted-publishers.ps1  release.ps1  test-all.ps1
