[package]
name = "gap-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mls", "audio", "voice", "opus", "group"]
categories = ["cryptography", "multimedia::audio", "network-programming"]
description = "Group Audio Protocol — the Opus-based audio sub-protocol of the Group Protocol Stack. Provides per-source replay protection on top of the GBP base layer."
readme = "README.md"

[lib]
name = "gap"
path = "src/lib.rs"

[dependencies]
gbp-protocol = { workspace = true }
gbp-core     = { workspace = true }
gbp-node     = { workspace = true }
gbp-mls      = { workspace = true }
gbp-proto    = { workspace = true }
gbp-flat     = { workspace = true }
ciborium     = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
serde_bytes  = { workspace = true }
thiserror    = { workspace = true }
