[package]
name = "gbp-flat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["gbp", "flatbuffers", "flat", "group", "messaging"]
categories = ["cryptography", "network-programming", "encoding"]
description = "FlatBuffers codec for the Group Protocol Stack (GBP/GTP/GAP/GSP). Alternative wire format to CBOR per gbp_rfc §12.2."
readme = "README.md"
build = "build.rs"

[lib]
name = "gbp_flat"
path = "src/lib.rs"

[dependencies]
planus = "1.3"
serde = { workspace = true }

[build-dependencies]
planus-translation = "1.3"
planus-codegen = "1.3"
