[package]
name = "gtp-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mls", "messaging", "chat", "e2ee", "group"]
categories = ["cryptography", "network-programming"]
description = "Group Text Protocol — the text-messaging sub-protocol of the Group Protocol Stack. Provides idempotent text delivery on top of the GBP base layer."
readme = "README.md"

[lib]
name = "gtp"
path = "src/lib.rs"

[dependencies]
gbp-protocol = { workspace = true }
gbp-core     = { workspace = true }
gbp-node     = { workspace = true }
gbp-mls      = { workspace = true }
ciborium     = { workspace = true }
serde        = { workspace = true }
serde_bytes  = { workspace = true }
thiserror    = { workspace = true }
sha2         = { workspace = true }
